# neo-zkvm

./: CHANGELOG.md  COMPREHENSIVE_REVIEW_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTION_READINESS_REPORT.md  README.md  RELEASE.md  REVIEW_FINDINGS.md  REVIEW_REPORT.md  SP1_REFACTOR_SUMMARY.md  book.toml  tarpaulin-report.html
.github/workflows/: ci.yml
crates/neo-vm-core/: Cargo.toml
crates/neo-vm-core/benches/: comprehensive_bench.rs  vm_bench.rs
crates/neo-vm-core/examples/: README.md  amm_swap.rs  multisig_wallet.rs  token_contract.rs  vm_examples.rs
crates/neo-vm-core/src/: engine.rs  lib.rs  native.rs  opcode.rs  stack_item.rs  storage.rs
crates/neo-vm-core/tests/: boundary_tests.rs  comprehensive_tests.rs  error_handling_tests.rs  gas_tests.rs  native_tests.rs  storage_tests.rs  vm_tests.rs
crates/neo-vm-guest/: Cargo.toml
crates/neo-vm-guest/src/: lib.rs
crates/neo-zkvm-cli/: Cargo.toml
crates/neo-zkvm-cli/src/: assembler.rs  disassembler.rs  main.rs
crates/neo-zkvm-cli/tests/: integration_tests.rs
crates/neo-zkvm-examples/: Cargo.toml
crates/neo-zkvm-examples/src/: basic.rs  native_contracts.rs  proof_generation.rs  storage_example.rs
crates/neo-zkvm-program/: Cargo.toml
crates/neo-zkvm-program/src/: main.rs
crates/neo-zkvm-prover/: Cargo.toml  build.rs
crates/neo-zkvm-prover/src/: lib.rs
crates/neo-zkvm-verifier/: Cargo.toml
crates/neo-zkvm-verifier/src/: lib.rs
docs/: MIGRATION.md  README.md  SP1_REFACTOR.md  SUMMARY.md  api-reference.md  architecture.md  book.toml  cli.md  completeness-proof.md  formal-verification.md  getting-started.md  opcodes.md  whitepaper.md
docs/plans/: 2026-01-31-zkvm-review-fixes.md
examples/: README.md  add.neoasm  basic.rs  compare.neoasm  complex_script.neoasm  factorial.neoasm  fibonacci.neoasm  loop.neoasm  multiply.neoasm  native_contracts.rs  proof_generation.rs  storage_example.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_script_parser.rs  fuzz_vm_execution.rs
scripts/: install.sh  test.sh
