[workspace]
resolver = "2"
members = [
    "crates/neo-vm-core",
    "crates/neo-vm-guest",
    "crates/neo-zkvm-prover",
    "crates/neo-zkvm-verifier",
    "crates/neo-zkvm-cli",
    "crates/neo-zkvm-program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/neo-project/neo-zkvm"

[workspace.dependencies]
# Neo VM Core
neo-vm-core = { path = "crates/neo-vm-core" }
neo-vm-guest = { path = "crates/neo-vm-guest" }
neo-zkvm-prover = { path = "crates/neo-zkvm-prover" }
neo-zkvm-verifier = { path = "crates/neo-zkvm-verifier" }

# zkVM frameworks
sp1-sdk = "4.0"
sp1-zkvm = "4.0"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
p256 = { version = "0.13", features = ["ecdsa"] }

# Serialization
serde = { version = "=1.0.217", features = ["derive", "alloc"] }
serde_json = "1.0"
bincode = "1.3"

# Utils
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
tracing = "0.1"
