[package]
name = "neo-zkvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
neo-vm-core = { path = "crates/neo-vm-core" }
neo-vm-guest = { path = "crates/neo-vm-guest" }

[[bin]]
name = "fuzz_vm_execution"
path = "fuzz_targets/fuzz_vm_execution.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_script_parser"
path = "fuzz_targets/fuzz_script_parser.rs"
test = false
doc = false
bench = false
