[package]
name = "neo-zkvm-program"
version.workspace = true
edition.workspace = true

[dependencies]
sp1-zkvm = "4.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3"
sha2 = { version = "0.10", default-features = false }

[build-dependencies]
sp1-build = "4.0"
