[package]
name = "neo-zkvm-prover"
version.workspace = true
edition.workspace = true

[dependencies]
neo-vm-core = { path = "../neo-vm-core" }
neo-vm-guest = { path = "../neo-vm-guest" }
sp1-sdk = { workspace = true }
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2.workspace = true

[build-dependencies]
sp1-build = "4.0"
